--- a/assignment/index.html
+++ b/assignment/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Hello World</title>
     <script  src="scripts/helloWorld.js" charset="utf-8"></script>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
     <h1>Hello World!</h1>
