final edit before submitting assignment

--- a/checkpoints/htmlcss/index.html
+++ b/checkpoints/htmlcss/index.html
@@ -27,9 +27,10 @@
         <!-- create a footer with a paragraph tag with your favorite quote -->
         <footer>
           <p>
-            "Known. Some. Call. Is. Air. Am. Incoherent?
-            Yes. Entirely without
-            meaning? I'm afraid not" Mark Z. Danielewski
+            "Known. Some. Call. Is. Air. Am. <br />
+            Incoherent? Yes. <br />
+            Entirely without meaning? <br />
+            I'm afraid not" Mark Z. Danielewski
           </p>
         </footer>
     </body>
